[project]
name = "annotated-transformer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "torch==2.6.0+rocm6.2.4",
    "torchvision==0.21.0+rocm6.2.4",
    "torchaudio==2.6.0+rocm6.2.4",
    # Explicitly add the triton package required by torch
    "pytorch-triton-rocm; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "pyrsmi>=1.1.0",
    "pandas>=3.0.1",
    "altair>=6.0.0",
    "spacy>=3.8.11",
]

[tool.uv.sources]
torch = { index = "pytorch-rocm" }
torchtext = { index = "pytorch-rocm" }
torchvision = { index = "pytorch-rocm" }
torchaudio = { index = "pytorch-rocm" }
pytorch-triton-rocm = { index = "pytorch-rocm" }

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2.4"
explicit = true

